--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,9 @@ jobs:
   build:
     docker:
       # specify the version
-      #
       - image: circleci/golang:1.12.7
+        environment:
+          GO111MODULE: "ON"
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -23,6 +24,5 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: export GO111MODULE=on
       - run: go get -v -t -d ./...
       - run: go test -v ./...
